fix nom de l'option enabled fix smooth scroll qui snap à la fin quand il s'y approche ajout de variables pour les custom modules utilisation de la classe Easing de base de minecraft plutôt qu'une custom modifier un module est maintenant possible ajout de la persistence des custom modules fix de certaines variables qui ne s'affichaient pas bien in game ou dans le menu réduction de la taille de ModuleContentField en sortant certaines classe dans d'autres fichiers refactoring de certaines méthodes qui étaient dupliquées ajout d'une placeholderValue en plus de la fallbackValue au SafeSupplier dans le cas où on est dans le CreateModuleScreen